Working on parameter distribution

--- a/secs/5-sat_detect/0-sat_detect.tex
+++ b/secs/5-sat_detect/0-sat_detect.tex
@@ -60,7 +60,7 @@ be implemented in real-time on the engine control unit (ECU) of a vehicle, enabl
 health monitoring.
 
 \input{secs/5-sat_detect/1-wald_test.tex}
-
+\input{secs/5-sat_detect/2-param_dist.tex}
 % \input{secs/5-sat_detect/paper/3-MLE_estimation.tex}
 % \input{secs/5-sat_detect/paper/4-catalyst_mode_detection.tex}
 % \input{secs/5-sat_detect/paper/5-catalyst_aging.tex}
