Done with the parameter distribution section

--- a/secs/5-sat_detect/2-param_dist.tex
+++ b/secs/5-sat_detect/2-param_dist.tex
@@ -1,5 +1,37 @@
 \section{Maximum Likelihood Estimation of the Saturated Catalyst Model Parameters}
-The catalyst switches between saturation mode and normal mode based on states that are not completely controllable experimentally. The bounding condition on the saturated system's response (\ref{eqn::eta_bound}) can be used for detecting segments of the data where the catalyst's operation is normal or saturated. As the saturated catalyst's response forms a tight upper bound to the actual system's response, the parameters of the system will be the solution to the linear programming problem that minimizes the area under the curve with the lower bound as the response of the actual system.
+For a parameter estimation based hypothesis test for catalyst saturation and aging detection, both the value of the
+parameters that minimize the prediction error and their distribution are required. The current section, therefore,
+reformulates the parameter estimation method (\ref{eqn::optimization_prob}) for saturated catalyst model parameters in a
+statistical estimation framework. The idea behind the parameter estimation method is rooted in the idea that for a given time step, maximum $NO_x$ reduction happens when the catalyst is saturated. Thus,
+under the same temperature, flow rate and inlet $NO_x$ concentration, the response of the saturated model
+(\ref{eqn::nox_mdl}) forms a tight upper bound to the response of the actual system, which switches between saturation
+and desaturation based on urea dosing, flow rate and catalyst temperature. This results in the following bounding
+condition (\ref{eqn::eta_bound}) on response of the saturated system.
+%===
+\begin{align}
+        \eta_{sat}(k) \geq \eta(k) \qquad \forall k
+        \label{eqn::eta_bound}
+\end{align}
+%===
+In the case of commercial $NO_x$ sensors, resulting error is modeled as a function of ammonia concentration and a
+temperature-dependent cross-sensitivity factor $\chi(T)$. This introduces a non-negative directional error
+$\lr{\varepsilon_\chi= \chi\lr{T(k)} \times \con{NH_3}^{out}\geq 0}$ into the tailpipe $NO_x$ measurement $y_1$.
+Accordingly, when the $NO_x$ reduction in a time-step is calculated from sensor measurements, $y_1(k) = x_1(k) +
+\varepsilon_{\chi}(k)$, the estimated quantity is less than the actual $NO_x$ reduction.
+\begin{align}
+        \eta_y(k) &= u_1(k-1) - y_1(k) =  \eta(k) - \varepsilon_\chi(k) \leq \eta(k) \label{eqn::cross_meas}
+\end{align}
+Thus, the bounding condition on the saturated system's response (\ref{eqn::eta_bound}) remains valid when the $NO_x$ reduction during the time-step is estimated from the $NO_x$ sensor measurements.
+\begin{align}
+        \eta_{sat}(k) &\geq \eta(k) = \eta_y(k) + \varepsilon_\chi(k) \geq \eta_y(k) \label{eqn::eta_y_bound}
+\end{align}
+%===
+The catalyst switches between saturation mode and normal mode based on states that are not completely controllable
+experimentally. The bounding condition on the saturated system's response (\ref{eqn::eta_bound}) can be used for
+detecting segments of the data where the catalyst's operation is normal or saturated. As the saturated catalyst's
+response forms a tight upper bound to the actual system's response, the parameters of the systems will be the solution
+to the linear programming problem that minimizes the area under the curve with the lower bound as the response of the
+actual system.
 \begin{align}
 \text{min. } \, \sum \eta_{sat}(k) \quad
 \text{s.t } \, \lr{\eta_{sat}(k) \geq \eta(k)} \quad \forall  k \label{eqn::lin_opt_1}
@@ -15,18 +47,14 @@ problem for estimating the parameters of the catalyst:
         \text{where, } & \qquad
         \Phi_{sat} = \bm{\phi_{sat}(1), \phi_{sat}(2), \hdots, \phi_{sat}(N-1)}^T \notag\\
         &\qquad H = \bm{ \eta(2), \eta(3), \hdots, \eta(N)}^T \notag\\
-        & \text{$\pmb 1$ is a column vector of ones.} \notag
+        & \text{$\pmb 1$ is a column vector of $1's$.} \notag
 \end{align}
 %===
-The above estimate of $\theta_{sat}$ is the \itbf{maximum likelihood estimate (MLE) under a half-normal distribution
+The above estimate of $\theta_{sat}$ is the \itbf{maximum likelihood estimate (MLE) under half-normal distribution
 \cite{942636} for model structure error}, $\lr{\varepsilon_\eta}$, between the saturated system's response,
-$\eta_{sat}(k)$, and the actual response of the catalyst, $\eta(k)$ (Appendix-\ref{sec::mle_derivation}). In the
+$\eta_{sat}(k)$, and the actual response of the catalyst, $\eta(k)$. In the
 case of $NO_x$-sensor data with cross-sensitivity, the model structure error includes the cross-sensitivity error
 $\varepsilon_{\chi}$ and is assumed to be a half-normal random variable.
-%===
-\input{secs/5-sat_detect/paper/3-subs/3-0-Apx-MLE_derivation.tex}
-\input{secs/5-sat_detect/paper/3-subs/3-1-theta_dist.tex}
-\input{secs/5-sat_detect/paper/3-subs/3-2-eta_sat_variance.tex}
-\input{secs/5-sat_detect/paper/3-subs/3-3-FTIR_results.tex}
-\input{secs/5-sat_detect/paper/3-subs/3-4-NOx_sensor_results.tex}
-\input{secs/5-sat_detect/paper/3-subs/3-1-Apx-necessary_condition.tex}
+% ===========================
+% ===========================
+\input{secs/5-sat_detect/2_subs/2-1_MLE_derivation.tex}
