added test cell data stuff

--- a/secs/5-sat_detect/0-sat_detect.tex
+++ b/secs/5-sat_detect/0-sat_detect.tex
@@ -43,7 +43,7 @@ constant and the surface concentration of viable voids, $k_{scr} \Gamma$, i.e.,
 \end{align}
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.5\textwidth]{./figs/5-sat_detect/1_intro/alpha_sat_1.png}
+    \includegraphics[width=\figWidth]{./figs/5-sat_detect/1_intro/alpha_sat_1.png}
     \caption{Time plot of $\alpha_{sat}$ for aged and degreened catalysts for RMC cycle}
     \label{fig::alpha_sat_1}
 \end{figure}
@@ -61,6 +61,7 @@ health monitoring.
 
 \input{secs/5-sat_detect/1-wald_test.tex}
 \input{secs/5-sat_detect/2-param_dist.tex}
+\input{secs/5-sat_detect/3-testcell_aging.tex}
 % \input{secs/5-sat_detect/paper/3-MLE_estimation.tex}
 % \input{secs/5-sat_detect/paper/4-catalyst_mode_detection.tex}
 % \input{secs/5-sat_detect/paper/5-catalyst_aging.tex}
