Added the figures

--- a/secs/5-sat_detect/3-testcell_aging.tex
+++ b/secs/5-sat_detect/3-testcell_aging.tex
@@ -69,4 +69,4 @@ parameters considering the maximum concentration of adsorbed ammonia as the conc
 saturation (Appendix-\ref{sec::necessary_cond}).
 % ==================================================================================================================
 \input{secs/5-sat_detect/3_subs/0_necc_cond.tex}
-% \input{secs/5-sat_detect/3_subs/1_cat_mode.tex}
+\input{secs/5-sat_detect/3_subs/1_cat_mode.tex}
