--- a/secs/5-sat_detect/3_subs/1_cat_mode.tex
+++ b/secs/5-sat_detect/3_subs/1_cat_mode.tex
@@ -8,11 +8,31 @@ mass flow rate, $F$) is less than the $\epsilon_{sat}$.
 \end{align}
 For the current test-cell and truck dataset, $\epsilon_{sat} = 2.5\times 10^{-3} \, mol/m^{-3}$. This value is chosen
 based on the variance of distribution of the prediction error for the saturated catalyst model.
-\begin{figure}[H]
-        \centering
-        \includegraphics[width=\figWidth]{./figs/4_cat_mode/SatDetect_dg_rmc_1_FTIR.png}
-        \caption{Catalyst Mode Detection for DG RMC 1 Data}
-        \label{fig::cat_mode_det}
+\begin{figure}[!ht]
+        \begin{minipage}{0.49\textwidth}
+                \begin{figure}[H]
+                        \centering
+                        \includegraphics[width=\textwidth]{./figs/5-sat_detect/3_parm_ID/SatDetect_aged_rmc_FTIR.png}
+                \end{figure}
+        \end{minipage}
+        \begin{minipage}{0.49\textwidth}
+                \begin{figure}[H]
+                        \centering
+                        \includegraphics[width=\textwidth]{./figs/5-sat_detect/3_parm_ID/SatDetect_dg_rmc_1_FTIR.png}
+                \end{figure}
+        \end{minipage}
+        \begin{minipage}{0.49\textwidth}
+                \begin{figure}[H]
+                        \centering
+                        \includegraphics[width=\textwidth]{./figs/5-sat_detect/3_parm_ID/SatDetect_dg_rmc_2_FTIR.png}
+                \end{figure}
+        \end{minipage}
+        \begin{minipage}{0.49\textwidth}
+                \begin{figure}[H]
+                        \centering
+                        \includegraphics[width=\textwidth]{./figs/5-sat_detect/3_parm_ID/SatDetect_dg_rmc_3_FTIR.png}
+                \end{figure}
+        \end{minipage}
 \end{figure}
 The catalyst mode detection for DG RMC 1 test-cell data using FTIR measurements is shown in
 Figure-\ref{fig::cat_mode_det}. The catalyst is found to be close to saturation (or at its maximum $NO_x$ reduction)
