--- a/secs/5-sat_detect/3_subs/1_cat_mode.tex
+++ b/secs/5-sat_detect/3_subs/1_cat_mode.tex
@@ -33,6 +33,8 @@ based on the variance of distribution of the prediction error for the saturated 
                         \includegraphics[width=\textwidth]{./figs/5-sat_detect/3_parm_ID/SatDetect_dg_rmc_3_FTIR.png}
                 \end{figure}
         \end{minipage}
+        \caption{Catalyst mode detection results for test-cell data}
+        \label{fig::cat_mode_det}
 \end{figure}
 The catalyst mode detection for DG RMC 1 test-cell data using FTIR measurements is shown in
 Figure-\ref{fig::cat_mode_det}. The catalyst is found to be close to saturation (or at its maximum $NO_x$ reduction)
