added the new file

--- a/secs/5-sat_detect/3-testcell_aging.tex
+++ b/secs/5-sat_detect/3-testcell_aging.tex
@@ -70,3 +70,4 @@ saturation (Appendix-\ref{sec::necessary_cond}).
 % ==================================================================================================================
 \input{secs/5-sat_detect/3_subs/0_necc_cond.tex}
 \input{secs/5-sat_detect/3_subs/1_cat_mode.tex}
+\input{secs/5-sat_detect/3_subs/2_aging_detection.tex}
