--- a/secs/5-sat_detect/0-sat_detect.tex
+++ b/secs/5-sat_detect/0-sat_detect.tex
@@ -62,6 +62,9 @@ health monitoring.
 \input{secs/5-sat_detect/1-wald_test.tex}
 \input{secs/5-sat_detect/2-param_dist.tex}
 \input{secs/5-sat_detect/3-testcell_aging.tex}
+\input{secs/5-sat_detect/4-truck_aging.tex}
+\input{secs/5-sat_detect/5-unconstrained_results.tex}
+\input{secs/5-sat_detect/6-detector_performance.tex}
 % \input{secs/5-sat_detect/paper/3-MLE_estimation.tex}
 % \input{secs/5-sat_detect/paper/4-catalyst_mode_detection.tex}
 % \input{secs/5-sat_detect/paper/5-catalyst_aging.tex}
