--- a/secs/5-sat_detect/4-truck_aging.tex
+++ b/secs/5-sat_detect/4-truck_aging.tex
@@ -47,7 +47,7 @@ potential of the proposed aging detection framework for on-board application usi
 
 % =================================================================
 
-\section{Aging Detector Results on Truck Data Drive Segments}
+\subsection{Aging Detector Results on Truck Data Drive Segments}
 The value of the Wald test statistic for each drive segment that met the necessary condition of sufficient samples close
 to catalyst saturation is calculated and tabulated in Tables~\ref{tab::adt_aging_res}, \ref{tab::mes_aging_res}, \ref{tab::wer_aging_res} and \ref{tab::trw_aging_res}, for each truck. The number and percentage of samples close to
 catalyst saturation in each drive segment is also tabulated. There is a strong correlation between detection of aging
