added the conclusion section

--- a/secs/0-front/2-dedication.tex
+++ b/secs/0-front/2-dedication.tex
@@ -5,8 +5,7 @@
 % \ifthenelse{\boolean{quick-or-debug}}{}
 {
 \begin{dedication}
-Dedicated to the women who shaped and are shaping my life. To Mom for never letting me settle for less, no matter how
-difficult it gets for everyone. To Shruthi for making sure I keep my promises to myself and others and, makeing me the
-better person for it.
+To my parents, thank you for always encouraging me to pursue hard things. \\
+To my wife, Shruthi, thank you for helping me stay true to my promises.
 \end{dedication}
 }
