--- a/thesis.tex
+++ b/thesis.tex
@@ -34,7 +34,7 @@
 \include{./secs/3-governing_eqns/0-governing_eqns.tex}
 \include{./secs/4-NOx_mdl/0-NOx_mdl.tex}
 \include{./secs/5-sat_detect/0-sat_detect.tex}
-% \include{./secs/n-conclusion/0-conclusion.tex}
+\include{./secs/n-conclusion/0-conclusion.tex}
 % =============================================================
 % \nocite{*}
 \include{./secs/n-back/0-end.tex}              % Back content (vita, bib settings, etc.)
