--- a/secs/0-front/0-front.tex
+++ b/secs/0-front/0-front.tex
@@ -2,7 +2,7 @@
 % Only include these sections if this is a proof or final version
 \ifthenelse{\boolean{quick}}{}{
     \input{./secs/0-front/1-comittee.tex}
-    % \input{./secs/0-front/2-dedication.tex}
+    \input{./secs/0-front/2-dedication.tex}
     \input{./secs/0-front/3-acknowledgments.tex}
     % \input{./secs/0-front/4-preface.tex}
     %
